syntax = "proto3";

package pb;

import "task.proto";


option go_package = "github.com/demola234/todogrpc/pb";

message EmptyGetRequest {
   
}

message GetAllTaskResponse {
    repeated Task tasks = 1;
}

message UpdateTaskRequest {
    int64 id = 1;
    string title = 2;
    string description = 3;
    bool completed = 4;
}

message UpdateTaskResponse {
    Task task = 1;
}


message CreateTaskRequest {
    Task task = 1;
}


message CreateTaskResponse {
    string task_name = 1;
    string task_description = 2;
    string task_deadline = 3;
    string task_status = 4;
    string task_priority = 5;
    google.protobuf.Timestamp task_createdAt = 6;
    google.protobuf.Timestamp task_updatedAt = 7;
    int64 task_id = 8;
}